--- a/app/views/emaileventreport.scala.html
+++ b/app/views/emaileventreport.scala.html
@@ -194,7 +194,7 @@
             <table>
               <tr>
                 <td>
-                  <h1>OPQHub Event Report</h1>
+                  <h1>OPQHub Event @pdi.getEmailFrequency Report</h1>
                   <h2>User: @pdi.getPersonLastName(), @pdi.getPersonFirstName()</h2>
                   <table class="event-data">
                     <tr>
